syntax = "proto3";

option csharp_namespace = "Itmo.Bebriki.Analytics.Contracts";

package itmo.bebriki.analytics;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "enums.proto";

service TaskAnalyticsService {
  rpc GetAnalytics(GetAnalyticsRequest) returns (GetAnalyticsResponse);
}

message GetAnalyticsRequest {
  int64 task_id = 1;
}

message GetAnalyticsResponse {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp last_update = 2;
  google.protobuf.Timestamp started_at = 3;
  google.protobuf.Duration time_spent = 4;
  JobTaskPriority highest_priority = 5;
  JobTaskState current_state = 6;
  int32 amount_of_agreements = 7;
  int32 total_updates = 8;
  int32 amount_of_unique_assignees = 9;
  int32 amount_of_unique_dependencies = 10;
}